--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,11 @@
 </tr>
 
   <tr>
+    <th>Created User:</th>
+    <td><%= @post.user.email %></td>
+  </tr>
+
+  <tr>
     <th>Created At:</th>
     <td><%= @post.created_at %></td>
   </tr>
