--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@ $navbar-default-link-hover-bg:black;
 
 
 @import 'bootstrap';
+@import "font-awesome";
+@import 'posts';
 
 body { padding-top:60px;}
-
-@import 'posts';
