--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,1 @@
-<%= render "posts/post_types/#{@bulletin.post_type}" %>
+<%= render "posts/post_types/#{@bulletin.post_type}".force_encoding("UTF-8") %>
