--- a/app/views/posts/post_types/_gallery.html.erb
+++ b/app/views/posts/post_types/_gallery.html.erb
@@ -2,28 +2,21 @@
 
 <h2><%= bulletin_name params[:bulletin_id] %></h2>
 
-<table class="table">
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Content</th>
-    <th colspan="3">Action</th>
-  </tr>
-  </thead>
-
-  <tbody>
+<div class="gallery">
   <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', [post.bulletin, post] , class:'btn btn-default' %>
-          <%= link_to 'Edit', edit_bulletin_post_path(post.bulletin,post) , class:'btn btn-default'%>
-          <%= link_to 'Destroy', [post.bulletin,post], method: :delete, data: { confirm: 'Are you sure?' } , class:'btn btn-default'%></td>
-      </tr>
+	<div class='col-lg-3 col-md-3 col-xs-12 picture'>
+		<div class='image'><%= link_to(image_tag(post.picture_url(:thumb)), [post.bulletin, post]) if post.picture? %></div>
+		<div class='title'><%= post.title %></div>
+		<div class='content'><%= post.content %></div>
+		<div class='actions'>
+			<%= link_to fa_icon('eye'), [post.bulletin, post] %>
+			<%= link_to fa_icon('edit'), edit_bulletin_post_path(post.bulletin, post) %>
+			<%= link_to fa_icon('trash'), [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' } %>
+		</div>
+      </div>
   <% end %>
-  </tbody>
-</table>
+</div>
 
 <br>
 
-<%= link_to 'New Post', new_bulletin_post_path, class:'btn btn-default' %>
+<%= link_to fa_icon('pencil'), new_bulletin_post_path, class:'btn btn-default' %>
