--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,12 +2,21 @@
 
 <h1>Listing Products</h1>
 
-<table>
+<%= form_tag products_path, :method => 'get' do %>
+  <%= hidden_field_tag :direction, params[:direction] %>
+  <%= hidden_field_tag :sort, params[:sort] %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
+<table class="pretty">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Code</th>
-      <th>Type</th>
+      <th><%= sortable "name" %></th>
+      <th><%= sortable "code" %></th>
+      <th><%= sortable "p_type" %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,6 +34,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate @products %>
 
 <br>
 
