--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @product.type %>
+  <%= @product.p_type %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
