--- a/app/views/bulletins/index.html.erb
+++ b/app/views/bulletins/index.html.erb
@@ -1,3 +1,5 @@
+# encoding: utf-8
+
 <p id="notice"><%= notice %></p>
 
 <h2>Listing Bulletins</h2>
@@ -5,7 +7,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>타이틀 </th>
       <th>Description</th>
       <th>Actions</th>
     </tr>
