--- a/app/views/nh_sales/index.html.erb
+++ b/app/views/nh_sales/index.html.erb
@@ -1,77 +1,29 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Nh Sales</h1>
 
-<%= form_tag nh_sales_path, :method => 'get' do %>
-  <%= hidden_field_tag :direction, params[:direction] %>
-  <%= hidden_field_tag :sort, params[:sort] %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
-
-<table id="sales" class="display" cellspacing="0" width="100%">
+<table id="sales" class="display nowrap" cellspacing="0" width="100%">
   <thead>
     <tr>
-      <th>From code</th>
-      <th>From name</th>
-      <th>Sale number</th>
-      <th>Confirm date</th>
-      <th>Delivery number</th>
-      <th>To code</th>
-      <th>To name</th>
-      <th>Depart code</th>
-      <th>Depart name</th>
-      <th>Supply type</th>
-      <th>Order no</th>
-      <th>Product code</th>
-      <th>Product name</th>
-      <th>Product size</th>
-      <th>Product tax</th>
-      <th>Purchase unit price</th>
-      <th>Purchase amount</th>
-      <th>Supply price</th>
-      <th>Purchase tax</th>
-      <th>Purchase price</th>
-      <th>Commission</th>
-      <th>Commission tax</th>
-      <th>Action</th>
+      <th>거래처코드</th>
+      <th>거래처명 </th>
+      <th>사업장코드 </th>
+      <th>사업장명 </th>
+      <th>매출일-전표번호</th>
+      
+      <th>검수일자 </th>
+      <th>거래구분명 </th>      
+      <th>제품명 </th>
+      <th>제품코드 </th>
+      <th>수량 </th>
+      
+      <th>매입단가 </th>
+      <th>매입부가세 </th>
+      <th>매입금액 </th>
+      <th>공급금액 </th>
+      <th>수수료 </th>
+      <th>수수료부가세 </th>
     </tr>
   </thead>
-
-  <tbody>
-    <% @nh_sales.each do |nh_sale| %>
-      <tr>
-        <td><%= nh_sale.from_code %></td>
-        <td><%= nh_sale.from_name %></td>
-        <td><%= nh_sale.sale_number %></td>
-        <td><%= nh_sale.confirm_date %></td>
-        <td><%= nh_sale.delivery_number %></td>
-        <td><%= nh_sale.to_code %></td>
-        <td><%= nh_sale.to_name %></td>
-        <td><%= nh_sale.depart_code %></td>
-        <td><%= nh_sale.depart_name %></td>
-        <td><%= nh_sale.supply_type %></td>
-        <td><%= nh_sale.order_no %></td>
-        <td><%= nh_sale.product_code %></td>
-        <td><%= nh_sale.product_name %></td>
-        <td><%= nh_sale.product_size %></td>
-        <td><%= nh_sale.product_tax %></td>
-        <td><%= nh_sale.purchase_unit_price %></td>
-        <td><%= nh_sale.purchase_amount %></td>
-        <td><%= nh_sale.supply_price %></td>
-        <td><%= nh_sale.purchase_tax %></td>
-        <td><%= nh_sale.purchase_price %></td>
-        <td><%= nh_sale.commission %></td>
-        <td><%= nh_sale.commission_tax %></td>
-        <td><%= link_to 'Show', nh_sale %>
-        	<%= link_to 'Edit', edit_nh_sale_path(nh_sale) %>
-        	<%= link_to 'Destroy', nh_sale, method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
 </table>
 
 <br>
@@ -84,11 +36,48 @@
 <% end %>
 
 <script>
-
+var table;
 $(document).ready(function() {
-  $('#sales').DataTable({
-  	"scrollX": true
+  table= $('#sales').DataTable({
+  	//"dom": '<"top"l<"toolbar">>rt<"bottom"ip><"clear">', 
+  	"scrollX": true,
+  	"processing": true,
+    "serverSide": true,
+    "fixedColumns" : {
+    	leftColumns:2
+    },
+  	"ajax": {
+  		"uri": "nh_sales.json",
+  		"type": "GET",
+  		"data": function ( d ) {
+					d.start_date = "2016-07-01";
+					d.end_date = "2016-07-04";
+				}	
+  	 },
+    "columns": [
+        { "data": "to_code" },
+        { "data": "to_name" },
+        { "data": "from_code" },
+        { "data": "from_name" },
+        { "data": "sale_number" },
+        
+        { "data": "confirm_date" },
+        { "data": "supply_type" },
+        { "data": "product_name" },
+        { "data": "product_code" },
+        { "data": "purchase_amount" },
+        
+        { "data": "purchase_unit_price" },
+        { "data": "purchase_tax" },
+        { "data": "purchase_price" },
+        { "data": "supply_price" },
+        { "data": "commission" },
+        { "data": "commission_tax" }
+
+    ],
+    "pagingType": "full_numbers"
   });
+  $("div.toolbar").html('<div class="col-xs-4">Custom tool bar! Text/images etc.</div>')
 });
 
 </script>
