--- a/app/views/bulletins/_form.html.erb
+++ b/app/views/bulletins/_form.html.erb
@@ -1,10 +1,11 @@
+
 <%= simple_form_for(@bulletin) do |f| %>
   <%= f.error_notification %>
-
+  
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description, input_html:{ rows:5 } %>
-    <%= f.input :post_type, collection: [['게시판','bulletin'],['블로그','blog'],['갤러리','gallery']] %>
+    <%= f.input :post_type, collection: Bulletin::BULLETIN_TYPE %>
   </div>
 
   <div class="form-actions">
